--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@ div.tp-dfwv {
   <h1 class="fluid">Welkom bij<br />Codeblocks.</h1>
 </header>
 
+  <p>[leerling portaal knop nog hier!!!] </p>
 <main>
   <section class="content fluid">
     <h2><span aria-hidden="true">leer&nbsp;</span>
