--- a/index.html
+++ b/index.html
@@ -1,386 +1,98 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Codeblocks</title>
-
-  <!-- CSS HIER -->
- <style>
-@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap');
-@import url('https://unpkg.com/normalize.css') layer(normalize);
-
-@layer normalize, base, demo, stick, effect, srollbar, debug;
-
-@layer debug {
-  [data-debug='true'] li {
-    outline: 0.05em dashed currentColor;
-  }
-  [data-debug='true'] :is(h2, li:last-of-type) {
-    outline: 0.05em dashed canvasText;
-  }
-}
-
-@layer scrollbar {
-  @property --hue {
-    initial-value: 0;
-    syntax: '<number>';
-    inherits: false;
-  }
-  @property --chroma {
-    initial-value: 0;
-    syntax: '<number>';
-    inherits: true;
-  }
-
-  [data-sync-scrollbar='true'] {
-    scrollbar-color: oklch(var(--lightness) var(--chroma) var(--hue)) #0000;
-  }
-  @supports (animation-timeline: scroll()) and (animation-range: 0% 100%) {
-    [data-sync-scrollbar='true'][data-animate='true'] {
-      timeline-scope: --list;
-      scrollbar-color: oklch(var(--lightness) var(--chroma, 0) var(--hue)) #0000;
-      animation-name: change, chroma-on, chroma-off;
-      animation-fill-mode: both;
-      animation-timing-function: linear;
-      /* animation-timeline: scroll(root); */
-      animation-range: entry 50% exit 50%, entry 40% entry 50%,
-        exit 30% exit 40%;
-      animation-timeline: --list;
-      ul {
-        view-timeline: --list;
-      }
-    }
-  }
-
-  @keyframes change {
-    to {
-      --hue: var(--end);
-    }
-  }
-  @keyframes chroma-on {
-    to {
-      --chroma: 0.3;
-    }
-  }
-  @keyframes chroma-off {
-    to {
-      --chroma: 0;
-    }
-  }
-}
-
-@layer effect {
-  :root {
-    --start: 0;
-    --end: 360;
-    --lightness: 65%;
-    --base-chroma: 0.3;
-  }
-  [data-theme='dark'] {
-    --lightness: 75%;
-  }
-  [data-theme='light'] {
-    --lightness: 65%;
-  }
-  @media (prefers-color-scheme: dark) {
-    --lightness: 75%;
-  }
-  ul {
-    --step: calc((var(--end) - var(--start)) / (var(--count) - 1));
-  }
-  li:not(:last-of-type) {
-    color: oklch(
-      var(--lightness) var(--base-chroma)
-        calc(var(--start) + (var(--step) * var(--i)))
-    );
-  }
-
-  @supports (animation-timeline: scroll()) and (animation-range: 0% 100%) {
-    [data-animate='true'] {
-      li {
-        opacity: 0.2;
-        animation-name: brighten;
-
-        &:first-of-type {
-          --start-opacity: 1;
-        }
-        &:last-of-type {
-          --brightness: 1;
-          --end-opacity: 1;
-        }
-        animation-fill-mode: both;
-        animation-timing-function: linear;
-        animation-range: cover calc(50% - 1lh) calc(50% + 1lh);
-        animation-timeline: view();
-      }
-    }
-
-    @keyframes brighten {
-      0% {
-        opacity: var(--start-opacity, 0.2);
-      }
-      50% {
-        opacity: 1;
-        filter: brightness(var(--brightness, 1.2));
-      }
-      100% {
-        opacity: var(--end-opacity, 0.2);
-      }
-    }
-  }
-}
-
-@layer stick {
-  section:first-of-type {
-    --font-level: 6;
-    display: flex;
-    line-height: 1.25;
-    width: 100%;
-    padding-left: 5rem;
-  }
-  section:last-of-type {
-    min-height: 100vh;
-    display: flex;
-    place-items: center;
-    width: 100%;
-    justify-content: center;
-
-    h2 {
-      --font-level: 6;
-    }
-  }
-  main {
-    width: 100%;
-  }
-  section:first-of-type h2 {
-    position: sticky;
-    top: calc(50% - 0.5lh);
-    font-size: inherit;
-    margin: 0;
-    display: inline-block;
-    height: fit-content;
-    font-weight: 600;
-  }
-  ul {
-    font-weight: 600;
-    padding-inline: 0;
-    margin: 0;
-    list-style-type: none;
-  }
-
-  [data-snap='true'] {
-    scroll-snap-type: y proximity;
-
-    li {
-      scroll-snap-align: center;
-    }
-  }
-
-  h2,
-  li:last-of-type {
-    background: linear-gradient(
-      canvasText 50%,
-      color-mix(in oklch, canvas, canvasText 25%)
-    );
-    background-clip: text;
-    color: #0000;
-  }
-}
-
-@layer demo {
-  header {
-    min-height: 100vh;
-    display: flex;
-    place-items: center;
-    width: 100%;
-    padding-inline: 5rem;
-  }
-
-  footer {
-    padding-block: 2rem;
-    opacity: 0.5;
-  }
-
-  h1 {
-    --font-size-min: 24;
-    --font-level: 8;
-    text-wrap: pretty;
-    line-height: 0.8;
-    margin: 0;
-    background: linear-gradient(
-      canvasText 60%,
-      color-mix(in oklch, canvas, canvasText)
-    );
-    background-clip: text;
-    color: #0000;
-  }
-}
-
-@layer base {
-  :root {
-    --font-size-min: 14;
-    --font-size-max: 20;
-    --font-ratio-min: 1.1;
-    --font-ratio-max: 1.33;
-    --font-width-min: 375;
-    --font-width-max: 1500;
-  }
-
-  html {
-    color-scheme: light dark;
-  }
-
-  [data-theme='light'] {
-    color-scheme: light only;
-  }
-
-  [data-theme='dark'] {
-    color-scheme: dark only;
-  }
-
-  :where(.fluid) {
-    --fluid-min: calc(
-      var(--font-size-min) * pow(var(--font-ratio-min), var(--font-level, 0))
-    );
-    --fluid-max: calc(
-      var(--font-size-max) * pow(var(--font-ratio-max), var(--font-level, 0))
-    );
-    --fluid-preferred: calc(
-      (var(--fluid-max) - var(--fluid-min)) /
-        (var(--font-width-max) - var(--font-width-min))
-    );
-    --fluid-type: clamp(
-      (var(--fluid-min) / 16) * 1rem,
-      ((var(--fluid-min) / 16) * 1rem) -
-        (((var(--fluid-preferred) * var(--font-width-min)) / 16) * 1rem) +
-        (var(--fluid-preferred) * var(--variable-unit, 100vi)),
-      (var(--fluid-max) / 16) * 1rem
-    );
-    font-size: var(--fluid-type);
-  }
-
-  *,
-  *:after,
-  *:before {
-    box-sizing: border-box;
-  }
-
-  body {
-    display: grid;
-    place-items: center;
-    background: light-dark(white, black);
-    min-height: 100vh;
-    font-family: 'Geist', 'SF Pro Text', 'SF Pro Icons', 'AOS Icons',
-      'Helvetica Neue', Helvetica, Arial, sans-serif, system-ui;
-  }
-
-  body::before {
-    --size: 45px;
-    --line: color-mix(in hsl, canvasText, transparent 70%);
-    content: '';
-    height: 100vh;
-    width: 100vw;
-    position: fixed;
-    background: linear-gradient(
-          90deg,
-          var(--line) 1px,
-          transparent 1px var(--size)
-        )
-        50% 50% / var(--size) var(--size),
-      linear-gradient(var(--line) 1px, transparent 1px var(--size)) 50% 50% /
-        var(--size) var(--size);
-    mask: linear-gradient(-20deg, transparent 50%, white);
-    top: 0;
-    transform-style: flat;
-    pointer-events: none;
-    z-index: -1;
-  }
-
-  .bear-link {
-    color: canvasText;
-    position: fixed;
-    top: 1rem;
-    left: 1rem;
-    width: 48px;
-    aspect-ratio: 1;
-    display: grid;
-    place-items: center;
-    opacity: 0.8;
-  }
-
-  :where(.x-link, .bear-link):is(:hover, :focus-visible) {
-    opacity: 1;
-  }
-
-  .bear-link svg {
-    width: 75%;
-  }
-
-  /* Utilities */
-  .sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border-width: 0;
-  }
-}
-
-div.tp-dfwv {
-  position: fixed;
-}
-  </style>
-  <!-- EINDE CSS -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Codeblocks - Home</title> <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
+    <header class="site-header">
+        <div class="container header-container">
+            <div class="logo">
+                <img src="https://github.com/Koen-HowtoHack/codeblocksportal/blob/main/cdn/cdn-bestanden/ChatGPT%20Image%2018%20apr%202025,%2011_02_55.png?raw=true" alt="Codeblocks Logo" width="150"> </div>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="#">Cursussen</a></li>
+                    <li><a href="#">Niveaus</a></li>
+                    <li><a href="#">Voor Docenten</a></li>
+                    <li><a href="#">Over Ons</a></li> </ul>
+            </nav>
+            <div class="header-actions">
+                <a href="#" class="btn btn-secondary">Login</a>
+                <a href="#" class="btn btn-primary">Vraag Demo Aan</a>
+            </div>
+        </div>
+    </header>
 
-<header>
-  <h1 class="fluid">Welkom bij<br />Codeblocks.</h1>
-</header>
+    <main>
+        <section class="hero-section">
+            <div class="container">
+                <h1>Leer programmeren met <code>Codeblocks</code></h1>
+                <p>Ontdek de wereld van code op een leuke en interactieve manier. Voor scholen en thuis!</p>
+                 <a href="#" class="btn btn-primary btn-large">Vraag een Gratis Demo Aan</a>
+              
+              <p>🐙 Alles op deze site is met liefde gebouwd. En een beetje chaos. ❤️‍🔥
+              -- oja de site is nog in development,   groetjes van de DEV's die aan dit project werken xD
+              [later wel weg halen staat er tijdelijk op]</p>
+            </div>
+        </section>
 
-  <p>[leerling portaal knop nog hier!!!] </p>
-<main>
-  <section class="content fluid">
-    <h2><span aria-hidden="true">leer&nbsp;</span>
-      <span class="sr-only"></span>
-    </h2>
-    <ul aria-hidden="true" style="--count: 22">
-      <li style="--i: 0">coderen.</li>
-      <li style="--i: 1">websites bouwen.</li>
-      <li style="--i: 2">games programmeren.</li>
-      <li style="--i: 3">apps maken.</li>
-      <li style="--i: 4">debuggen.</li>
-      <li style="--i: 5">werken met HTML & CSS.</li>
-      <li style="--i: 6">JavaScript gebruiken.</li>
-      <li style="--i: 7">animaties maken.</li>
-      <li style="--i: 8">computers begrijpen.</li>
-      <li style="--i: 9">prompting</li>
-      <li style="--i: 10">problemen oplossen.</li>
-      <li style="--i: 11">robots programmeren.</li>
-      <li style="--i: 12">logisch denken.</li>
-      <li style="--i: 13">je eigen game maken.</li>
-      <li style="--i: 14">eigen software ontwikkelen.</li>
-      <li style="--i: 15">variabelen gebruiken.</li>
-      <li style="--i: 16">opdrachten automatiseren.</li>
-      <li style="--i: 17">AI trainen.</li>
-      <li style="--i: 18">veilig internetten.</li>
-      <li style="--i: 19">3D-modellen ontwerpen.</li>
-      <li style="--i: 20">samenwerken aan code.</li>
-      <li style="--i: 21">met Codeblocks.</li>
-    </ul>
-  </section>
-  <section>
-    <h2 class="fluid"></h2>
-  </section>
-</main>
+        <section class="content-blocks">
+            <div class="container blocks-container">
+                 <div class="content-card card-basisschool">
+                    <div class="card-image">
+                        <img src="https://github.com/Koen-HowtoHack/codeblocksportal/blob/main/cdn/cdn-bestanden/ChatGPT%20Image%2018%20apr%202025,%2014_31_27.png?raw=true" alt="Codeblocks Basisschool"> </div>
+                    <div class="card-content">
+                        <h2>Groep 6, 7, 8 Basisschool</h2>
+                        <p>Maak kennis met de basis van programmeren via leuke projecten en visuele tools.</p>
+                        <a href="#" class="btn btn-secondary">Ontdek nu</a>
+                    </div>
+                </div>
+                <div class="content-card card-middelbaar">
+                    <div class="card-image">
+                         <img src="https://github.com/Koen-HowtoHack/codeblocksportal/blob/main/cdn/cdn-bestanden/ChatGPT%20Image%2018%20apr%202025,%2014_37_32.png?raw=true" alt="Codeblocks Middelbare School"> </div>
+                     <div class="card-content">
+                        <h2>Klas 1, 2, 3 Middelbare School</h2>
+                        <p>Verdiep je kennis met echte programmeertalen zoals Python, HTML/CSS en JavaScript.</p>
+                        <a href="#" class="btn btn-secondary">Bekijk aanbod</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-<footer>
+        <section class="info-section alternate-bg layout-split layout-text-left">
+            <div class="container split-container">
+                <div class="text-content">
+                    <h2>Ons Cursusmateriaal</h2>
+                    <ul>
+                       
+                        <li>✓ Voorbeelden: Web Development, Python Basics, Game Design</li>
+                        <li>✓ <strong>95% van de gebruikers</strong> beveelt Codeblocks aan</li>
+                        <li>✓ Persoonlijke ondersteuning voor een succesvolle start</li>
+                    </ul>
+                     <a href="#" class="btn btn-secondary">Bekijk onze cursussen</a>
+                </div>
+                <div class="image-content">
+                    <img src="https://github.com/Koen-HowtoHack/codeblocksportal/blob/main/cdn/cdn-bestanden/ChatGPT%20Image%2018%20apr%202025,%2015_06_27.png?raw=true" alt="Illustratie van Codie bij een python teminal">
+                </div>
+            </div>
+        </section>
+
+        <section class="info-section layout-split layout-image-left">
+            <div class="container split-container">
+                 <div class="image-content">
+                     <img src="https://github.com/Koen-HowtoHack/codeblocksportal/blob/main/cdn/cdn-bestanden/ChatGPT%20Image%2018%20apr%202025,%2017_55_11.png?raw=true" alt="Illustratie van technologie in het klaslokaal">
+                </div>
+                <div class="text-content">
+                    <h2>Zo verbind jij technologie aan het klaslokaal</h2>
+                    <p class="large-paragraph">De technologische ontwikkelingen gaan razendsnel... Bij Codeblocks zorgen we ervoor dat ons lesmateriaal actueel is... Zo verbind jij als docent (of leer je zelf) relevante tech skills! Daarnaast bieden wij verschillende projecten en workshops aan, zoals <code>Web Development</code> en <code>Programmeren</code>.</p>
+                    <a href="#" class="btn btn-secondary">Ontdek de mogelijkheden</a>
+                </div>
+            </div>
+        </section> 
+  </main>
+
+    <footer>
   <p>© 2025 Codeblocks • Een initiatief van <a href="https://howtohack.nl">How to Hack</a></p>
 </footer>
 
