--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codeblocks - Home</title> <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://codeblocks-portal.howtohack.nl/cdn/favicon.jpg" type="image/x-icon">
   
 
 </head>
- <link rel="icon" type="image/jpeg" href="https://github.com/Koen-HowtoHack/codeblocksportal/blob/main/cdn/favicon.jpg?raw=true">
 <body>
     <header class="site-header">
         <div class="container header-container">
