--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codeblocks - Home</title> <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="https://codeblocks-portal.howtohack.nl/cdn/favicon.jpg" type="image/x-icon">
+    <link rel="icon" href="https://cdn.codeblocks.nl/general/files/images/favicon.jpg" type="image/x-icon">
 
 
 </head>
