--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="card-image">
                         <img src="https://github.com/Koen-HowtoHack/codeblocksportal/blob/main/cdn/cdn-bestanden/ChatGPT%20Image%2018%20apr%202025,%2014_31_27.png?raw=true" alt="Codeblocks Basisschool"> </div>
                     <div class="card-content">
-                        <h2>Groep 6, 7, 8 Basisschool</h2>
+                        <h2>Groep 7 en 8 Basisschool</h2>
                         <p>Maak kennis met de basis van programmeren via leuke projecten en visuele tools.</p>
                         <a href="#" class="btn btn-secondary">Ontdek nu</a>
                     </div>
@@ -69,7 +69,6 @@
                     <ul>
                        
                         <li>✓ Voorbeelden: Web Development, Python Basics, Game Design</li>
-                        <li>✓ <strong>95% van de gebruikers</strong> beveelt Codeblocks aan</li>
                         <li>✓ Persoonlijke ondersteuning voor een succesvolle start</li>
                     </ul>
                      <a href="#" class="btn btn-secondary">Bekijk onze cursussen</a>
