--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 
     <footer>
   <p>© 2025 Codeblocks • Een initiatief van <a href="https://howtohack.nl">How to Hack</a></p>
+        <elevenlabs-convai agent-id="u07eyol7vLoIyzSTqdp8"></elevenlabs-convai><script src="https://elevenlabs.io/convai-widget/index.js" async type="text/javascript"></script>
 </footer>
 
 </body>
