--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="#">Over Ons</a></li> </ul>
             </nav>
             <div class="header-actions">
-                <a href="#" class="btn btn-secondary">Login</a>
+                <a href="https://login.codeblocks.nl/" class="btn btn-secondary">Login</a>
                 <a href="#" class="btn btn-primary">Vraag Demo Aan</a>
             </div>
         </div>
