--- a/demo/index.html
+++ b/demo/index.html
@@ -2,226 +2,263 @@
 <html lang="nl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Python Quiz – Les 1</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Python Quiz – Les 1</title>
+  <meta name="theme-color" content="#ff9d8a" />
 
-  <!-- Google Font voor een moderne look -->
+  <!-- Inter‑font voor strakke typografie -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
-  <style>
-    :root {
-      /* Kleuren – donkere modus */
-      --bg-gradient-start: #4f46e5;
-      --bg-gradient-end:   #0ea5e9;
-      --card-bg:           rgba(255,255,255,0.12);
-      --border:            rgba(255,255,255,0.25);
-      --text:              #f8fafc;
-      --primary:           #38bdf8;
-      --primary-hover:     #0ea5e9;
-      --shadow:            0 8px 32px rgba(0,0,0,0.35);
-    }
+  <!-- Ionicons – vector‑icons voor UI‑elementen -->
+  <script type="module" src="https://unpkg.com/ionicons@7/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7/dist/ionicons/ionicons.js"></script>
 
-    /* Lichte modus (automatisch via OS‑instelling) */
-    @media (prefers-color-scheme: light) {
-      :root {
-        --bg-gradient-start: #38bdf8;
-        --bg-gradient-end:   #4f46e5;
-        --card-bg:           #ffffffee;
-        --border:            rgba(0,0,0,0.05);
-        --text:              #0f172a;
-        --primary:           #4f46e5;
-        --primary-hover:     #4338ca;
+  <style>
+    :root{
+      /* Vrolijk kleurpalet */
+      --bg-gradient:   linear-gradient(120deg,#ff9d8a 0%,#f6d365 50%,#96e6a1 100%);
+      --card-bg:       #ffffffd9;  /* glaskaart */
+      --border:        #ffffff40;
+      --text:          #1e293b;
+      --primary:       #6366f1;
+      --primary-hover: #4f46e5;
+      --correct:       #10b981;
+      --incorrect:     #ef4444;
+      --shadow:        0 10px 30px rgba(0,0,0,0.18);
+      --nav-height:    64px;
+    }
+    @media(prefers-color-scheme:dark){
+      :root{
+        --bg-gradient: linear-gradient(120deg,#4f46e5 0%,#3b82f6 50%,#06b6d4 100%);
+        --card-bg:     #1e293bcc;
+        --border:      #33415580;
+        --text:        #f1f5f9;
+        --primary:     #f59e0b;
+        --primary-hover:#d97706;
       }
     }
 
-    /* Reset */
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+    *,*::before,*::after{box-sizing:border-box;margin:0;padding:0;}
+    html,body{height:100%;width:100%;}
 
-    body {
-      font-family: "Inter", sans-serif;
-      background: linear-gradient(135deg, var(--bg-gradient-start) 0%, var(--bg-gradient-end) 100%);
-      color: var(--text);
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 2rem;
+    body{
+      font-family:"Inter",sans-serif;
+      background:var(--bg-gradient);
+      color:var(--text);
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      justify-content:center;
+      padding:calc(1.5vh + env(safe-area-inset-top)) 1rem calc(var(--nav-height) + env(safe-area-inset-bottom) + 1rem) 1rem;
+      touch-action:manipulation;
+      -webkit-tap-highlight-color:transparent;
     }
 
-    .quiz-container {
-      width: 100%;
-      max-width: 520px;
-      background: var(--card-bg);
-      backdrop-filter: blur(18px);
-      border: 1px solid var(--border);
-      border-radius: 1.5rem;
-      padding: clamp(1.5rem, 4vw, 2.5rem);
-      box-shadow: var(--shadow);
-      animation: zoomIn 0.6s ease;
+    /* ------- App‑kaart -------- */
+    .quiz-container{
+      width:100%;
+      max-width:24rem;
+      background:var(--card-bg);
+      backdrop-filter:blur(18px);
+      border:1px solid var(--border);
+      border-radius:1.5rem;
+      padding:clamp(1.25rem,5vw,1.75rem);
+      box-shadow:var(--shadow);
+      display:flex;
+      flex-direction:column;
+      gap:1rem;
+      animation:slideUp .6s cubic-bezier(.215,.61,.355,1);
     }
+    @keyframes slideUp{0%{opacity:0;transform:translateY(40px);}100%{opacity:1;transform:translateY(0);}}
 
-    @keyframes zoomIn {
-      from { transform: scale(0.9); opacity: 0; }
-      to   { transform: scale(1);   opacity: 1; }
+    /* ------- Header met terugknop -------- */
+    .header{
+      display:flex;
+      align-items:center;
+      gap:.75rem;
     }
-
-    h1 {
-      font-size: clamp(1.6rem, 5vw, 2.2rem);
-      margin-bottom: 1.5rem;
-      text-align: center;
+    .back-btn{
+      all:unset;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      width:2.5rem;height:2.5rem;
+      border-radius:50%;
+      background:var(--primary);
+      color:#fff;
+      cursor:pointer;
+      flex-shrink:0;
+      transition:background .15s ease,transform .15s ease;
     }
+    .back-btn:active{transform:scale(.92);}  
+    h1{font-size:clamp(1.4rem,5vw,1.7rem);font-weight:700;}
 
-    .question {
-      font-size: clamp(1.1rem, 4vw, 1.3rem);
-      margin-bottom: 1.25rem;
-      line-height: 1.35;
-      min-height: 3.5rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
+    /* ------- Vraag en opties -------- */
+    .question{
+      font-size:clamp(1.05rem,4.5vw,1.25rem);
+      text-align:center;
+      min-height:3.5rem;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      line-height:1.35;
     }
-
-    .options button {
-      all: unset;
-      display: block;
-      width: 100%;
-      padding: 0.9rem 1rem;
-      margin-bottom: 0.75rem;
-      font-weight: 600;
-      text-align: center;
-      border-radius: 0.8rem;
-      background: var(--primary);
-      color: #ffffff;
-      cursor: pointer;
-      transition: transform 0.16s ease, background 0.16s ease;
-      user-select: none;
+    .options{display:flex;flex-direction:column;align-items:center;gap:.65rem;}
+    .options button{
+      all:unset;
+      width:100%;
+      max-width:17rem;
+      padding:.85rem 1rem;
+      border-radius:1rem;
+      background:var(--primary);
+      color:#fff;
+      font-weight:600;
+      text-align:center;
+      cursor:pointer;
+      user-select:none;
+      transition:background .15s ease,transform .15s ease;
     }
+    .options button:hover,.options button:focus-visible{background:var(--primary-hover);transform:translateY(-2px);}
+    .options button.correct{background:var(--correct);}  
+    .options button.incorrect{background:var(--incorrect);}  
 
-    .options button:hover,
-    .options button:focus-visible {
-      background: var(--primary-hover);
-      transform: translateY(-2px);
+    .feedback{
+      font-size:1rem;
+      text-align:center;
+      min-height:1.7rem;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      gap:.4rem;
     }
+    .feedback ion-icon{font-size:1.4rem;}
 
-    .options button.correct   { background: #16a34a; }
-    .options button.incorrect { background: #dc2626; }
-
-    .feedback {
-      font-size: 1.05rem;
-      text-align: center;
-      min-height: 1.5rem;
-      margin-top: 1rem;
+    /* ------- Bottom Navigation -------- */
+    .bottom-nav{
+      position:fixed;
+      inset:auto 0 0 0;
+      height:var(--nav-height);
+      padding-bottom:calc(env(safe-area-inset-bottom));
+      background:var(--card-bg);
+      backdrop-filter:blur(24px);
+      border-top:1px solid var(--border);
+      display:flex;
+      justify-content:space-around;
+      align-items:center;
+      box-shadow:0 -4px 18px rgba(0,0,0,.2);
     }
-
-    /* Zorg voor extra padding onderaan op kleine schermen, zodat de knoppen boven het iOS‑toetsenbord blijven */
-    @media (max-height: 650px) {
-      body { padding-bottom: 5rem; }
+    .nav-item{
+      all:unset;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      font-size:.73rem;
+      font-weight:600;
+      color:var(--text);
+      cursor:pointer;
+      user-select:none;
+      transition:color .15s ease,transform .15s ease;
     }
+    .nav-item:active{transform:translateY(2px);}
+    .nav-item.active{color:var(--primary);} /* actief tabje */
+    .nav-item ion-icon{font-size:1.35rem;line-height:1;margin-bottom:.1rem;}
+    @media(max-width:350px){.nav-item ion-icon{font-size:1.18rem;}}
   </style>
 </head>
 <body>
-  <div class="quiz-container">
-    <h1>Python Les 1 – Quiz</h1>
-    <div class="question" id="question">Laden …</div>
-    <div class="options" id="options"></div>
+  <div class="quiz-container" id="view-quiz">
+    <div class="header">
+      <button class="back-btn" id="btn-back" aria-label="Terug">
+        <ion-icon name="chevron-back-outline"></ion-icon>
+      </button>
+      <h1>Python Les 1 – Quiz</h1>
+    </div>
+
+    <div class="question" id="question">Laden …</div>
+    <div class="options"  id="options"></div>
     <div class="feedback" id="feedback"></div>
   </div>
 
+  <!-- Bottom Navigation Bar -->
+  <nav class="bottom-nav" aria-label="Hoofdmenu">
+    <button class="nav-item active" id="nav-home" aria-label="Home">
+      <ion-icon name="home-outline"></ion-icon>
+      <span class="nav-label">Start</span>
+    </button>
+    <button class="nav-item" id="nav-quiz" aria-label="Quiz">
+      <ion-icon name="help-circle-outline"></ion-icon>
+      <span class="nav-label">Quiz</span>
+    </button>
+    <button class="nav-item" id="nav-info" aria-label="Info">
+      <ion-icon name="information-circle-outline"></ion-icon>
+      <span class="nav-label">Info</span>
+    </button>
+  </nav>
+
   <script>
-    const quizData = [
-      {
-        question: "Wat doet de regel: print('Hallo, wereld!')?",
-        options: [
-          "Maakt een variabele aan",
-          "Laat de computer iets zeggen",
-          "Vraagt iets aan de gebruiker",
-          "Maakt een foutmelding"
-        ],
-        correct: 1
-      },
-      {
-        question: "Wat doet de functie input()?",
-        options: [
-          "Print iets op het scherm",
-          "Slaat een bestand op",
-          "Stelt een vraag aan de gebruiker",
-          "Maakt een keuze tussen twee opties"
-        ],
-        correct: 2
-      },
-      {
-        question: "Wat gebeurt er als iemand iets anders typt dan 'bos' of 'stad'?",
-        options: [
-          "Het programma crasht",
-          "De computer doet niets",
-          "De else‑code wordt uitgevoerd",
-          "Er wordt altijd naar het bos gegaan"
-        ],
-        correct: 2
-      },
-      {
-        question: "Wat is een variabele in Python?",
-        options: [
-          "Een printregel",
-          "Een doosje om informatie in op te slaan",
-          "Een knop",
-          "Een fout"
-        ],
-        correct: 1
-      }
+    /* 1️⃣ Quizgegevens */
+    const quizData=[
+      {question:"Wat doet de regel: print('Hallo, wereld!')?",options:["Maakt een variabele aan","Laat de computer iets zeggen","Vraagt iets aan de gebruiker","Maakt een foutmelding"],correct:1},
+      {question:"Wat doet de functie input()?",options:["Print iets op het scherm","Slaat een bestand op","Stelt een vraag aan de gebruiker","Maakt een keuze tussen twee opties"],correct:2},
+      {question:"Wat gebeurt er als iemand iets anders typt dan 'bos' of 'stad'?",options:["Het programma crasht","De computer doet niets","De else-code wordt uitgevoerd","Er wordt altijd naar het bos gegaan"],correct:2},
+      {question:"Wat is een variabele in Python?",options:["Een printregel","Een doosje om informatie in op te slaan","Een knop","Een fout"],correct:1}
     ];
 
-    let currentQuestion = 0;
+    /* Element‑referenties */
+    const questionEl=document.getElementById('question');
+    const optionsEl =document.getElementById('options');
+    const feedbackEl=document.getElementById('feedback');
 
-    function loadQuestion() {
-      const q = quizData[currentQuestion];
-      document.getElementById("question").textContent = q.question;
-
-      const optionsEl   = document.getElementById("options");
-      const feedbackEl  = document.getElementById("feedback");
-      optionsEl.innerHTML = "";
-      feedbackEl.textContent = "";
-
-      q.options.forEach((option, index) => {
-        const btn = document.createElement("button");
-        btn.textContent = option;
-        btn.addEventListener("click", () => checkAnswer(index, btn));
+    let currentQuestion=0;
+    function loadQuestion(){
+      const {question,options}=quizData[currentQuestion];
+      questionEl.textContent=question;
+      optionsEl.innerHTML='';
+      feedbackEl.textContent='';
+      options.forEach((opt,i)=>{
+        const btn=document.createElement('button');
+        btn.textContent=opt;
+        btn.addEventListener('click',()=>checkAnswer(i,btn));
         optionsEl.appendChild(btn);
       });
     }
 
-    function checkAnswer(selectedIndex, btnEl) {
-      const correctIndex = quizData[currentQuestion].correct;
-      const feedbackEl   = document.getElementById("feedback");
-
-      // Geef kleur aan het aangeklikte antwoord
-      if (selectedIndex === correctIndex) {
-        btnEl.classList.add("correct");
-        feedbackEl.textContent = "✅ Goed gedaan!";
-        if ("vibrate" in navigator) navigator.vibrate(100);
-      } else {
-        btnEl.classList.add("incorrect");
-        feedbackEl.textContent = "❌ Oeps! Dat is niet juist.";
-        if ("vibrate" in navigator) navigator.vibrate([50, 50, 50]);
+    function checkAnswer(i,btn){
+      const correctIndex=quizData[currentQuestion].correct;
+      if(i===correctIndex){
+        btn.classList.add('correct');
+        feedbackEl.innerHTML='<ion-icon name="checkmark-circle-outline"></ion-icon> Goed gedaan!';
+        navigator.vibrate?.(80);
+      }else{
+        btn.classList.add('incorrect');
+        feedbackEl.innerHTML='<ion-icon name="close-circle-outline"></ion-icon> Dat is niet juist.';
+        navigator.vibrate?.([60,40,60]);
       }
-
-      // Wacht even voordat we doorgaan naar de volgende vraag
-      setTimeout(() => {
+      setTimeout(()=>{
         currentQuestion++;
-        if (currentQuestion < quizData.length) {
+        if(currentQuestion<quizData.length){
           loadQuestion();
-        } else {
-          document.getElementById("question").textContent = "Klaar!";
-          document.getElementById("options").innerHTML = "";
-          feedbackEl.textContent = "Je hebt de quiz voltooid 🎉";
+        }else{
+          questionEl.textContent='Klaar!';
+          optionsEl.innerHTML='';
+          feedbackEl.innerHTML='<ion-icon name="party-outline"></ion-icon> Je hebt de quiz voltooid';
         }
-      }, 1200);
+      },1100);
     }
-
     loadQuestion();
+
+    /* 2️⃣ Terug‑knop (mock) */
+    document.getElementById('btn-back').addEventListener('click',()=>{
+      alert('Terug naar vorige scherm (mock‑actie)');
+    });
+
+    /* 3️⃣ Bottom‑nav interactiviteit (mock) */
+    document.querySelectorAll('.nav-item').forEach(btn=>btn.addEventListener('click',()=>{
+      document.querySelectorAll('.nav-item').forEach(b=>b.classList.remove('active'));
+      btn.classList.add('active');
+    }));
   </script>
 </body>
 </html>
