--- a/404.html
+++ b/404.html
@@ -35,8 +35,7 @@
       padding: 2rem;
       background:
         radial-gradient(circle at center, var(--clr-middle) 0%, var(--clr-outer) 70%),
-        linear-gradient(to top, var(--clr-outer) 0%, var(--clr-middle) 40%),
-        linear-gradient(to bottom, var(--clr-outer) 0%, var(--clr-middle) 40%);
+        linear-gradient(to top, var(--clr-outer) 0%, var(--clr-middle) 50%);
       background-blend-mode: lighten;
     }
 
@@ -88,7 +87,7 @@
 <body>
   <img src="https://codeblocks.nl/cdn-homepage/Ontwerp%20zonder%20titel.gif" alt="404 Mascotte" />
   <h1>Oeps... 404!</h1>
-  <p>Deze pagina bestaat niet (meer).💀</p>
+  <p>Deze pagina bestaat niet (meer). Misschien zit 'ie ergens anders verstopt 🕵️</p>
   <a href="https://codeblocks.nl">🔙 Terug naar de homepage</a>
 </body>
 </html>
