--- a/sw/ai-masterclass/index.html
+++ b/sw/ai-masterclass/index.html
@@ -58,10 +58,10 @@
   <!-- Idea Panel -->
   <section id="panelIdeas" class="panel active">
     <h2>Stap 1 – Antwoord op de vragen</h2>
-    <label>Je eigen naam</label><input id="uName" type="text" placeholder="Bijv. Lucas" />
+    <label>Je eigen naam</label><input id="uName" type="text" placeholder="Bijv. Mees" />
     <label>AI‑naam</label><input id="aiName" type="text" placeholder="Bijv. SlimmieBot" />
-    <label>Doel van je AI</label><textarea id="aiGoal" placeholder="Bijv. Huiswerk uitleggen"></textarea>
-    <label>Toon van je AI</label><input id="aiTone" type="text" placeholder="Bijv. Vrolijk met emoji’s" />
+    <label>Doel van je AI</label><textarea id="aiGoal" placeholder="Bijv. Huiswerk uitleggen zonder antwoorden"></textarea>
+    <label>Toon van je AI</label><input id="aiTone" type="text" placeholder="Bijv. Gen Alpha" />
     <label>Kleur gebruiker</label><input id="userCol" type="color" value="#4a90e2" />
     <label>Kleur AI</label><input id="aiCol" type="color" value="#e6f0ff" />
     <label>Upload je AI‑logo (PNG/JPG)</label><input id="aiLogo" type="file" accept="image/*" />
@@ -87,7 +87,7 @@
     <h2>Stap 2 – Bouw & Test je AI</h2>
     <label>Naam AI</label><input id="bName" type="text" />
     <label>Prompt / instructies</label><textarea id="bPrompt"></textarea>
-    <label>Gemini API‑key</label><input id="bKey" type="text" placeholder="Plak je key" />
+    <label>Gemini API‑key</label><input id="bKey" type="text" placeholder="Plak je API key" />
     <label>Kleur gebruiker</label><input id="bUserCol" type="color" value="#4a90e2" />
     <label>Kleur AI</label><input id="bAiCol" type="color" value="#e6f0ff" />
     <div style="display:flex;gap:1rem;flex-wrap:wrap"><button id="btnSave" class="secondary">💾 Opslaan</button><button id="btnTest">💬 Test AI</button></div>
