--- a/sw/ai-masterclass/index.html
+++ b/sw/ai-masterclass/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CodeBlocks AI Studio</title>
-  <!-- Google Gemini & html2canvas -->
   <script type="module" src="https://esm.run/@google/generative-ai"></script>
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
@@ -39,8 +38,6 @@
     .swatch{width:60px;height:60px;border:1px solid #ccc;border-radius:12px}
     .swatch-label{font-size:.65rem;text-align:center;margin-top:.25rem}
     .poster-footer{font-size:.7rem;text-align:center;opacity:.8;margin-top:12px}
-
-    /* Chat overlay */
     #chatOverlay{display:none;position:fixed;inset:0;background:#ffffff;z-index:1000;flex-direction:column}
     .chat-header{display:flex;align-items:center;padding:1rem 1.5rem;border-bottom:1px solid #e2e8f0;font-weight:700}
     .chat-body{flex:1;padding:1rem 1.5rem;overflow-y:auto;display:flex;flex-direction:column;gap:1rem}
@@ -55,7 +52,6 @@
   <h1>CodeBlocks AI Studio</h1>
   <div class="tabs"><button id="tabIdeas" class="tab active">📓 Ideeën</button><button id="tabBuild" class="tab">🛠️ Builder & Tester</button></div>
 
-  <!-- Idea Panel -->
   <section id="panelIdeas" class="panel active">
     <h2>Stap 1 – Antwoord op de vragen</h2>
     <label>Je eigen naam</label><input id="uName" type="text" placeholder="Bijv. Mees" />
@@ -82,7 +78,6 @@
     </div>
   </section>
 
-  <!-- Builder Panel -->
   <section id="panelBuild" class="panel">
     <h2>Stap 2 – Bouw & Test je AI</h2>
     <label>Naam AI</label><input id="bName" type="text" />
@@ -93,8 +88,7 @@
     <div style="display:flex;gap:1rem;flex-wrap:wrap"><button id="btnSave" class="secondary">💾 Opslaan</button><button id="btnTest">💬 Test AI</button></div>
   </section>
 
-  <!-- Chat Overlay -->
-  <div id="chatOverlay" style="display:none">
+  <div id="chatOverlay">
     <div class="chat-header">🤖 <span id="chatName" style="margin-left:.5rem">AI Chat</span><button id="chatClose" style="margin-left:auto;background:none;border:none;font-size:1.4rem">✖</button></div>
     <div class="chat-body" id="chatBody"></div>
     <div class="chat-input"><input id="chatInput" type="text" placeholder="Typ hier…"><button id="chatSend">Stuur</button></div>
@@ -102,44 +96,138 @@
 
   <script type="module">
     import { GoogleGenerativeAI } from "https://esm.run/@google/generative-ai";
+    const $ = id => document.getElementById(id);
 
-    const $=id=>document.getElementById(id);
+    $('tabIdeas').onclick = () => switchTab('ideas');
+    $('tabBuild').onclick = () => switchTab('build');
+    function switchTab(t) {
+      $('panelIdeas').classList.toggle('active', t === 'ideas');
+      $('panelBuild').classList.toggle('active', t === 'build');
+      $('tabIdeas').classList.toggle('active', t === 'ideas');
+      $('tabBuild').classList.toggle('active', t === 'build');
+    }
 
-    // Tabs
-    $('tabIdeas').onclick=()=>switchTab('ideas');
-    $('tabBuild').onclick=()=>switchTab('build');
-    function switchTab(t){$('panelIdeas').classList.toggle('active',t==='ideas');$('panelBuild').classList.toggle('active',t==='build');$('tabIdeas').classList.toggle('active',t==='ideas');$('tabBuild').classList.toggle('active',t==='build');}
+    ['uName','aiName','aiGoal','aiTone','userCol','aiCol'].forEach(id => $(id).addEventListener('input', renderPreview));
+    $('aiLogo').addEventListener('change', e => {
+      const f = e.target.files[0];
+      if (!f) return;
+      const r = new FileReader();
+      r.onload = () => {
+        $('prevUserLogo').src = r.result;
+        $('prevUserLogo').style.display = 'block';
+      };
+      r.readAsDataURL(f);
+    });
 
-    // Preview updates
-    ['uName','aiName','aiGoal','aiTone','userCol','aiCol'].forEach(id=>$(id).addEventListener('input',renderPreview));
-    $('aiLogo').addEventListener('change',e=>{const f=e.target.files[0];if(!f)return;const r=new FileReader();r.onload=()=>{$('prevUserLogo').src=r.result;$('prevUserLogo').style.display='block';};r.readAsDataURL(f);});
-    function renderPreview(){const u=$('uName').value||'–';$('prevUser').textContent=u;$('prevTitle').textContent=$('aiName').value||'BOTNAAM';$('prevGoal').textContent=$('aiGoal').value||'–';$('prevTone').textContent=$('aiTone').value||'–';const uc=$('userCol').value;const ac=$('aiCol').value;$('swatchUser').style.background=uc;$('swatchUserVal').textContent=uc;$('swatchAi').style.background=ac;$('swatchAiVal').textContent=ac;document.documentElement.style.setProperty('--user-color',uc);document.documentElement.style.setProperty('--ai-color',ac);$('prevFooter').textContent=new Date().toLocaleString('nl-NL',{day:'2-digit',month:'2-digit',year:'numeric',hour:'2-digit',minute:'2-digit'});}
+    function renderPreview() {
+      $('prevUser').textContent = $('uName').value || '–';
+      $('prevTitle').textContent = $('aiName').value || 'BOTNAAM';
+      $('prevGoal').textContent = $('aiGoal').value || '–';
+      $('prevTone').textContent = $('aiTone').value || '–';
+      const uc = $('userCol').value;
+      const ac = $('aiCol').value;
+      $('swatchUser').style.background = uc;
+      $('swatchUserVal').textContent = uc;
+      $('swatchAi').style.background = ac;
+      $('swatchAiVal').textContent = ac;
+      document.documentElement.style.setProperty('--user-color', uc);
+      document.documentElement.style.setProperty('--ai-color', ac);
+      $('prevFooter').textContent = new Date().toLocaleString('nl-NL', {
+        day: '2-digit', month: '2-digit', year: 'numeric', hour: '2-digit', minute: '2-digit'
+      });
+    }
     renderPreview();
 
-    // Download poster
-    $('btnPoster').onclick=()=>html2canvas($('posterPrev')).then(c=>{const a=document.createElement('a');a.href=c.toDataURL('image/png');a.download=`${$('aiName').value||'Poster'}.png`;a.click();});
+    $('btnPoster').onclick = () =>
+      html2canvas($('posterPrev')).then(c => {
+        const a = document.createElement('a');
+        a.href = c.toDataURL('image/png');
+        a.download = `${$('aiName').value || 'Poster'}.png`;
+        a.click();
+      });
 
-    // Save config
-    let cfg={};
-    $('btnSave').onclick=()=>{cfg={name:$('bName').value||'AI',prompt:$('bPrompt').value||'',key:$('bKey').value,userCol:$('bUserCol').value,aiCol:$('bAiCol').value};alert('Opgeslagen!');};
+    let cfg = {};
+    const saved = localStorage.getItem('cb-ai-config');
+    if (saved) {
+      cfg = JSON.parse(saved);
+      $('bName').value = cfg.name;
+      $('bPrompt').value = cfg.prompt;
+      $('bKey').value = cfg.key;
+      $('bUserCol').value = cfg.userCol;
+      $('bAiCol').value = cfg.aiCol;
+      document.documentElement.style.setProperty('--user-color', cfg.userCol);
+      document.documentElement.style.setProperty('--ai-color', cfg.aiCol);
+    }
 
-    // Chat overlay
-    $('btnTest').onclick=()=>{
-      if(!cfg.key){alert('Sla eerst je config op met geldige API‑key');return;}
-      $('chatName').textContent=cfg.name;
-      $('chatBody').innerHTML='';
-      document.documentElement.style.setProperty('--user-color',cfg.userCol);document.documentElement.style.setProperty('--ai-color',cfg.aiCol);
-      $('chatOverlay').style.display='flex';
+    $('btnSave').onclick = () => {
+      cfg = {
+        name: $('bName').value || 'AI',
+        prompt: $('bPrompt').value || '',
+        key: $('bKey').value,
+        userCol: $('bUserCol').value,
+        aiCol: $('bAiCol').value
+      };
+      localStorage.setItem('cb-ai-config', JSON.stringify(cfg));
+      alert('Opgeslagen!');
     };
-    $('chatClose').onclick=()=>{$('chatOverlay').style.display='none';};
 
-    async function sendMsg(){const text=$('chatInput').value.trim();if(!text)return;$('chatInput').value='';addBubble(text,'user');addBubble('…','ai');try{const gen=new GoogleGenerativeAI(cfg.key);const model=gen.getGenerativeModel({model:'models/gemini-1.5-flash'});const res=await model.generateContent(cfg.prompt+"\nGebruiker: "+text);replaceLast(res.response.text());}catch(e){replaceLast('⚠️ '+e.message);} }
-    $('chatSend').onclick=sendMsg;$('chatInput').addEventListener('keydown',e=>{if(e.key==='Enter'&&!e.shiftKey){e.preventDefault();sendMsg();}});
-    function addBubble(t,cls){const div=document.createElement('div');div.className='bubble '+cls;div.textContent=t;$('chatBody').appendChild(div);$('chatBody').scrollTop=$('chatBody').scrollHeight;}
-    function replaceLast(t){const b=[...$('chatBody').querySelectorAll('.bubble.ai')].pop();if(b)b.textContent=t;$('chatBody').scrollTop=$('chatBody').scrollHeight;}
+    $('btnTest').onclick = () => {
+      if (!cfg.key) {
+        alert('Sla eerst je config op met geldige API‑key');
+        return;
+      }
+      $('chatName').textContent = cfg.name;
+      $('chatBody').innerHTML = '';
+      document.documentElement.style.setProperty('--user-color', cfg.userCol);
+      document.documentElement.style.setProperty('--ai-color', cfg.aiCol);
+      $('chatOverlay').style.display = 'flex';
+    };
 
-    // Move idea values to builder
-    $('btnToBuild').onclick=()=>{$('bName').value=$('aiName').value;$('bPrompt').value=`Je bent ${$('aiName').value}. Doel: ${$('aiGoal').value}. Toon: ${$('aiTone').value}.`;$('bUserCol').value=$('userCol').value;$('bAiCol').value=$('aiCol').value;switchTab('build');};
+    $('chatClose').onclick = () => $('chatOverlay').style.display = 'none';
+
+    async function sendMsg() {
+      const text = $('chatInput').value.trim();
+      if (!text) return;
+      $('chatInput').value = '';
+      addBubble(text, 'user');
+      addBubble('…', 'ai');
+      try {
+        const gen = new GoogleGenerativeAI(cfg.key);
+        const model = gen.getGenerativeModel({ model: 'models/gemini-1.5-flash' });
+        const res = await model.generateContent(cfg.prompt + "\nGebruiker: " + text);
+        replaceLast(res.response.text());
+      } catch (e) {
+        replaceLast('⚠️ ' + e.message);
+      }
+    }
+    $('chatSend').onclick = sendMsg;
+    $('chatInput').addEventListener('keydown', e => {
+      if (e.key === 'Enter' && !e.shiftKey) {
+        e.preventDefault();
+        sendMsg();
+      }
+    });
+
+    function addBubble(t, cls) {
+      const div = document.createElement('div');
+      div.className = 'bubble ' + cls;
+      div.textContent = t;
+      $('chatBody').appendChild(div);
+      $('chatBody').scrollTop = $('chatBody').scrollHeight;
+    }
+    function replaceLast(t) {
+      const b = [...$('chatBody').querySelectorAll('.bubble.ai')].pop();
+      if (b) b.textContent = t;
+      $('chatBody').scrollTop = $('chatBody').scrollHeight;
+    }
+
+    $('btnToBuild').onclick = () => {
+      $('bName').value = $('aiName').value;
+      $('bPrompt').value = `Je bent ${$('aiName').value}. Doel: ${$('aiGoal').value}. Toon: ${$('aiTone').value}.`;
+      $('bUserCol').value = $('userCol').value;
+      $('bAiCol').value = $('aiCol').value;
+      switchTab('build');
+    };
   </script>
 </body>
 </html>
