--- a/404.html
+++ b/404.html
@@ -85,9 +85,9 @@
   </style>
 </head>
 <body>
-  <img src="https://codeblocks.nl/cdn-homepage/Ontwerp%20zonder%20titel.gif" alt="404 Mascotte" />
+  <img src="https://github.com/lucasenlucas/codeblocks/blob/main/cdn-homepage/Ontwerp%20zonder%20titel-2.gif?raw=true" alt="404 Mascotte" />
   <h1>Oeps... 404!</h1>
-  <p>Deze pagina bestaat niet (meer). Misschien zit 'ie ergens anders verstopt 🕵️</p>
+  <p>Deze pagina bestaat niet (meer).</p>
   <a href="https://codeblocks.nl">🔙 Terug naar de homepage</a>
 </body>
 </html>
