--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="hero-section" id="home">
       <div class="container">
         <h1>Leer programmeren met Codeblocks</h1>
-        <p>Ontdek de wereld van code op een leuke en interactieve manier – voor scholen én thuis!</p>
+        <p>Ontdek de wereld van code op de leukste en interactievste manier voor scholen!</p>
         <a href="#demo" class="btn btn-primary btn-large">Vraag een gratis demo aan</a>
       </div>
     </section>
@@ -94,7 +94,8 @@
         <div class="text-content">
           <h2>Ons cursus­materiaal</h2>
           </ul>
-        <li> 
+      <p> Bij Codeblocks ontwikkelen we leertrajecten voor zowel beginnende als gevorderde leerlingen. Ons cursusmateriaal is modulair opgebouwd en sluit aan bij de belevingswereld van jongeren. Of je nu werkt met visuele blokken zoals Blockly, of direct aan de slag wilt met Python of HTML – er is voor ieder niveau een passende leerroute.
+Elke cursus bevat interactieve opdrachten, heldere uitlegvideo’s en directe feedback. Zo leren leerlingen niet alleen de techniek, maar ook het probleemoplossend denken dat nodig is in de digitale wereld van morgen. </p>
           <a href="#" class="btn btn-secondary">Bekijk onze cursussen</a>
         </div>
         <div class="image-content">
