--- a/index.html
+++ b/index.html
@@ -133,9 +133,7 @@ Elke cursus bevat interactieve opdrachten, heldere uitlegvideo’s en directe fe
         © 2025 Codeblocks • Een initiatief van
         <a href="https://howtohack.nl" target="_blank" rel="noopener">How to Hack</a>
       </p>
-      <!-- Conversational widget -->
-      <elevenlabs-convai agent-id="u07eyol7vLoIyzSTqdp8"></elevenlabs-convai>
-      <script src="https://elevenlabs.io/convai-widget/index.js" async type="text/javascript"></script>
+      <!-- dit was onze prachtige code xD -->
     </footer>
   </body>
 </html>
