--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Codeblocks – Home</title>
+<script defer data-domain="codeblocks.nl" src="https://plausible.io/js/script.outbound-links.tagged-events.js"></script>
+<script>
+  window.plausible = window.plausible || function() {
+    (window.plausible.q = window.plausible.q || []).push(arguments);
+  }
+</script>
 
     <!--  Fonts  -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -49,7 +55,7 @@
       <div class="container">
         <h1>Leer programmeren met Codeblocks</h1>
         <p>Ontdek de wereld van code op de leukste en interactievste manier voor scholen!</p>
-        <a href="#demo" class="btn btn-primary btn-large">Vraag een gratis demo aan</a>
+        <a href="#demo" class="btn btn-primary btn-large" onclick="plausible('demo-aanvraag')">Vraag een gratis demo aan</a>
       </div>
     </section>
 
